kubernetes/mainnet/monitor.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: casperholders-state-metrics
    k8s-app: casperholders-state-metrics
  annotations:
    alpha.monitoring.coreos.com/non-namespaced: "true"
  name: casperholders-state-metrics
spec:
  ports:
    - name: http-metrics
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: casperholders-api
